{
  "version": 4,
  "terraform_version": "0.13.2",
  "serial": 61,
  "lineage": "67b655e6-0a40-a49e-9cc2-e4c13e16869b",
  "resources": [
    {
      "module": "module.compute_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "dev-firewall-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-09-10T04:30:33.525-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/vadim-fedorenko-internship/global/firewalls/dev-firewall-rule",
            "log_config": [],
            "name": "dev-firewall-rule",
            "network": "https://www.googleapis.com/compute/v1/projects/vadim-fedorenko-internship/global/networks/dev-vpc",
            "priority": 1000,
            "project": "vadim-fedorenko-internship",
            "self_link": "https://www.googleapis.com/compute/v1/projects/vadim-fedorenko-internship/global/firewalls/dev-firewall-rule",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.compute_instance_template",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.223.180.72",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2020-09-10T04:27:48.088-07:00",
            "id": "projects/vadim-fedorenko-internship/regions/us-central1/addresses/ipv4-address",
            "name": "ipv4-address",
            "network_tier": "PREMIUM",
            "project": "vadim-fedorenko-internship",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/vadim-fedorenko-internship/regions/us-central1/addresses/ipv4-address"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.compute_loadbalancer",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "dev-backendservice",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "projects/vadim-fedorenko-internship/zones/us-central1-c/instanceGroups/dev-instance-group",
                "max_utilization": 0.8
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2020-09-10T04:30:46.064-07:00",
            "enable_cdn": false,
            "fingerprint": "glN6Qyh8-n0=",
            "health_checks": [
              "projects/vadim-fedorenko-internship/global/healthChecks/dev-healh-check"
            ],
            "id": "projects/vadim-fedorenko-internship/global/backendServices/dev-backendservice",
            "load_balancing_scheme": "EXTERNAL",
            "name": "dev-backendservice",
            "port_name": "http",
            "project": "vadim-fedorenko-internship",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/vadim-fedorenko-internship/global/backendServices/dev-backendservice",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "module.compute_loadbalancer.google_compute_health_check.healthcheck_name"
          ]
        }
      ]
    },
    {
      "module": "module.compute_loadbalancer",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "global_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/vadim-fedorenko-internship/global/forwardingRules/dev-loadbalancer-global-forwarding-rule",
            "ip_address": "35.241.32.150",
            "ip_protocol": "TCP",
            "load_balancing_scheme": "EXTERNAL",
            "name": "dev-loadbalancer-global-forwarding-rule",
            "port_range": "80-80",
            "project": "vadim-fedorenko-internship",
            "self_link": "https://www.googleapis.com/compute/v1/projects/vadim-fedorenko-internship/global/forwardingRules/dev-loadbalancer-global-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/vadim-fedorenko-internship/global/targetHttpProxies/dev-loadbalancer-proxy"
          },
          "dependencies": [
            "module.compute_loadbalancer.google_compute_backend_service.dev-backendservice",
            "module.compute_loadbalancer.google_compute_health_check.healthcheck_name",
            "module.compute_loadbalancer.google_compute_target_http_proxy.target_http_proxy",
            "module.compute_loadbalancer.google_compute_url_map.url_map"
          ]
        }
      ]
    },
    {
      "module": "module.compute_loadbalancer",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "target_http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-09-10T04:31:11.487-07:00",
            "id": "projects/vadim-fedorenko-internship/global/targetHttpProxies/dev-loadbalancer-proxy",
            "name": "dev-loadbalancer-proxy",
            "project": "vadim-fedorenko-internship",
            "proxy_id": 9158104857011794064,
            "self_link": "https://www.googleapis.com/compute/v1/projects/vadim-fedorenko-internship/global/targetHttpProxies/dev-loadbalancer-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/vadim-fedorenko-internship/global/urlMaps/dev-loadbalancer"
          },
          "dependencies": [
            "module.compute_loadbalancer.google_compute_backend_service.dev-backendservice",
            "module.compute_loadbalancer.google_compute_health_check.healthcheck_name",
            "module.compute_loadbalancer.google_compute_url_map.url_map"
          ]
        }
      ]
    },
    {
      "module": "module.compute_loadbalancer",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-09-10T04:30:58.860-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/vadim-fedorenko-internship/global/backendServices/dev-backendservice",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "ivfDpkBrwOM=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/vadim-fedorenko-internship/global/urlMaps/dev-loadbalancer",
            "map_id": 8454194751245627549,
            "name": "dev-loadbalancer",
            "path_matcher": [],
            "project": "vadim-fedorenko-internship",
            "self_link": "https://www.googleapis.com/compute/v1/projects/vadim-fedorenko-internship/global/urlMaps/dev-loadbalancer",
            "test": [],
            "timeouts": null
          },
          "dependencies": [
            "module.compute_loadbalancer.google_compute_backend_service.dev-backendservice",
            "module.compute_loadbalancer.google_compute_health_check.healthcheck_name"
          ]
        }
      ]
    },
    {
      "module": "module.compute_vpc_network.module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "us-central1/dev-subnet",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-09-09T06:18:32.114-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/vadim-fedorenko-internship/regions/us-central1/subnetworks/dev-subnet",
            "ip_cidr_range": "10.0.0.0/9",
            "name": "dev-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/vadim-fedorenko-internship/global/networks/dev-vpc",
            "private_ip_google_access": false,
            "project": "vadim-fedorenko-internship",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/vadim-fedorenko-internship/regions/us-central1/subnetworks/dev-subnet"
          },
          "dependencies": [
            "module.compute_vpc_network.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.compute_vpc_network.module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/vadim-fedorenko-internship/global/networks/dev-vpc",
            "name": "dev-vpc",
            "project": "vadim-fedorenko-internship",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/vadim-fedorenko-internship/global/networks/dev-vpc"
          }
        }
      ]
    }
  ]
}